fix alignment issues for episode page in safari?

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -823,7 +823,7 @@ and (max-width: 700px){
         margin-left:-20px;
     }
     #episodesContainer{
-        margin-left:-5vw;
+        /*margin-left:-5vw;*/
         margin:0;
         padding:0;
         width:100vw;
